 * Modified DataObj to clear changed fields after commit

2009-05-27 tdb
 * To supply file data to a File object use "_content", which can take
    a sub, file handle or scalar reference.
 * Storage controller will now write content to all configured plugins

2009-05-28 tdb
 * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]

2009-05-28 tdb
 * Moved most of SystemSettings.pm into system configuration files
 * Can now disable a repository through a system configuration setting

2009-06-03 cjg
 * New EPScript methods: citation_link, dataset, related_objects, url,
    doc_size, is_public, thumbnail_url, preview_link, icon, human_filesize,
    control_url, contact_email.
 * Fixed issue in related items which gave warnings if "type" not defined.
 * New EPC tag type: epc:debug, which is like print but sends the XML to 
    STDERR for debugging purposes.
 * Improvements to the epc:foreach processing (better handling of multiple
    object types in lists)
 * Fixed typo in comment on User.pm
 * Changed sword_depositor to an itemref from a text type.
 * Moved most of eprint_render.pl into a citation file: summary_page.xml

2009-06-03 cjg
 * Added new EPScript method render_data_row
 * Added phrase to go with it.
 * Used this to shorten the summary_page.xml file.

2009-06-04 cjg
 * New Script method: property() which takes a string and returns a property
    from a hash or dataobj.
 * Removed render_data_row() method as it's not needed after all.
 * Removed the data_row phrase too.
 * Reworked summary_page.xml to iterate over a list of fields from
    eprint_render.pl

2009-06-05 tdb/dct05r
 * Added Sun Cloud Storage Service support

2009-06-08 tdb
 * Added a prepare_select() method that allows x-database LIMITS
    [Alexander Bergolth]

2009-06-09 tdb
 * Use fileinfo field to render document links (faster citation rendering)

2009-06-09 tdb
 * Look for document format icons in system as well as the repository
